--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -13,7 +13,7 @@
     --primarySoft-color: #acd0d5;
     --secundary-color: #336749;
     --grey-color: #f6f6f6;
-
+    --primary-color-active: #00a2b7;
 
     --greenSoft-color: #008ba1;
     --blue-light-color: #64C9ED;
