--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -17,3 +17,15 @@
     min-width: 100vw;
     // min-height: 100vh;
 }
+
+.css-1jy569b-MuiFormLabel-root-MuiInputLabel-root.Mui-focused{
+    color: var(--primary-color) !important;
+}
+
+.css-md26zr-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline{
+    border-color: var(--primarySoft-color) !important;
+}
+
+.css-8ewcdo-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline{
+    border-color: var(--primarySoft-color) !important;
+}
