--- a/src/styles/components/CreateTouristPoint.scss
+++ b/src/styles/components/CreateTouristPoint.scss
@@ -59,24 +59,35 @@
         input::placeholder {
           color: #aaa;
         }
-  
-        button {
-          padding: 12px 20px;
-          border: none;
-          border-radius: 4px;
-          background-color: var(--primary-color);
-          color: #fff;
-          font-size: 1rem;
-          cursor: pointer;
-          transition: background-color 0.3s ease;
-          &:hover {
-            background-color: var(--greenSoft-color);
-          }
-          &:disabled {
-            background-color: #aaa;
-            cursor: not-allowed;
-          }
+        .contBtns{
+            display: flex;
+    width: 100%;
+    justify-content: space-between;
+            button {
+                width: 45%;
+              padding: 12px 20px;
+              border: none;
+              border-radius: 4px;
+              background-color: var(--primarycolor);
+              color: #fff;
+              font-size: 1rem;
+              cursor: pointer;
+              transition: background-color 0.3s ease;
+              &:hover {
+                background-color: var(--greenSoft-color);
+              }
+              &:disabled {
+                background-color: var(--primarySoft-color);
+                cursor: not-allowed;
+              }
+            }
+            .cancelbtn{
+                width: 45%;
+                background-color: #555;
+              }
         }
+
+
       }
     }
     .map-container-text{
@@ -144,22 +155,6 @@
     font-size: 1rem;
     color: var(--greenSoft-color);
   }
-  @media (max-width: 768px) {
-    .form-map-container {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        justify-content: end;
-        align-items: flex-end;
-        .form-container {
-            width: 90%;
-        }
-      .map-container {
-        width: 90%;
-        height: 300px; 
-      }
-    }
-  }
   .image-preview-container{
     overflow: hidden;
     width:100px;
@@ -186,3 +181,116 @@
                }
 
   }
+
+  @media (max-width: 768px) {
+    .form-map-container {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+        justify-content: end;
+        align-items: flex-end;
+        .form-container {
+            width: 90%;
+        }
+      .map-container {
+        width: 90%;
+        height: 300px; 
+      }
+      .map-container-text{
+        width: 90%;
+        & h4{
+            font-size: 0.9rem;
+            color: #015d6b;
+            text-align: center;
+            margin-bottom: 10px;
+        }
+    }
+    }
+    .images-container {
+        width: 100%;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      
+        .upload-icon {
+            cursor: pointer;
+            display: flex;
+            margin-right: 0%;
+            margin-left: 2%;
+            width: 50px;
+            height: 50px;
+            align-items: center;
+            justify-content: center;
+            
+            & img{
+                width: 50px;
+                height: 50px;
+            }
+    
+        }
+      
+        .image-previews {
+            width: 88%;
+            height: 120px;
+          display: flex;
+          gap: 10px;
+          flex-wrap: wrap;
+          .imagesLoad {
+            width: 100px; 
+            height: 80px;
+          }
+        }
+      }
+      .image-preview-container{
+            overflow: hidden;
+            width:100px;
+            height: 80px;
+            position: relative;
+            border-radius: 10px;
+            .remove-image-button{
+                position: absolute;
+                bottom: 0;
+                width:100px;
+                height: 20px;
+                background-color: #c5c5c5cd;
+                display: flex;
+                justify-content: center;
+                z-index: 1;
+                transition: all 3s;
+            }  
+      }
+      .contBtns{
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        button {
+        width: 35%;
+          padding: 8px 10px;
+          border: none;
+          border-radius: 4px;
+          background-color: var(--primarycolor);
+          color: #fff;
+          font-size: 0.8rem;
+          cursor: pointer;
+          transition: background-color 0.3s ease;
+          height: 40px;
+          justify-content: center;
+          align-items: center;
+          align-content: center;
+          &:hover {
+            background-color: var(--greenSoft-color);
+          }
+          &:disabled {
+            background-color: var(--primarySoft-color);
+            cursor: not-allowed;
+          }
+        }
+        .cancelbtn{
+            width: 45%;
+            font-size: 0.8rem;
+            background-color: #555;
+          }
+    }
+  }
+  
