--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    background: linear-gradient(45deg, var(--primary-color), var(--primarySoft-color));
+    // background: linear-gradient(45deg, var(--primary-color), var(--primarySoft-color));
+    background-color: var(--primary-color);
     color: #fff;
     padding: 10px;
     bottom: 0;
