--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -25,10 +25,11 @@
     overflow-x: hidden;
     flex-direction: column;
     justify-content: space-between;
-    z-index: 0;
+    z-index: 2;
     transition: width 0.5s ease, opacity 0.2s ease-in;
     @media (max-width: 480px) {
       position: fixed;
+      overflow-x:visible;
       width: 40px;
       background-color: linear-gradient(to bottom, #e8e8e8c1, transparent);
       height: 100%;
@@ -116,7 +117,10 @@
     flex-direction: row;
     align-content: center;
     align-items: center;
-    width: 200px;
+    width: 40px;
+    &.open{
+      width: 200px;
+    }
   }  
   
   .panelicono{
@@ -135,7 +139,7 @@
     }
     @media (max-width: 480px) {
       width: 20px;
-      margin-left: 15px;
+      margin-left: 12px;
   }
   }
   .politicas{
