--- a/src/styles/pages/Dashboard.scss
+++ b/src/styles/pages/Dashboard.scss
@@ -1,11 +1,70 @@
 .dashboardContainer {
-    padding-left: 100px;
-    padding-top: 50px;
-    background-color: #f5f5f5;
+    padding: 3%;
     height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .dashboardTitle {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.cardsContainer {
+    z-index: 0;
+    padding-left: 2%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 150px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    text-align: center;
+    text-decoration: none;
+    color: #333;
+    background-color: var(--primary-color);
+    transition: box-shadow 0.3s ease;
+
+    &:hover {
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        .cardLabel{
+            color: #00e1ff;
+        }
+        .cardIcon{
+            color: #00e1ff;
+        }
+    }
+
+    .cardIcon {
+        font-size: 1rem;
+        margin-bottom: 10px;
+        width: 50px;
+        height: 50px;
+    }
+
+    .cardLabel {
+        font-size: 0.8rem;
+        color: #fff;
+    }
+}
+.Background{
+    position: absolute;
+    top: 0;
+    height: 100%;
+    opacity: 0.5;
+    z-index: 0;
 }
