--- a/src/styles/pages/Home.scss
+++ b/src/styles/pages/Home.scss
@@ -8,14 +8,15 @@
   background-color: var(--grey-color);
   font-family: 'Roboto', sans-serif;
   color: #333;
-
+  background-image: url(../../assets/images/fondo-poli.svg);
+  @media (max-width: 500px) {
+    padding: 0;
+    height: 100%;
+  }
   .content-container {
     width: 90%;
     display: flex;
     justify-content: space-between;
-    // align-items: flex-start;
-    // flex-wrap: wrap;
-    // gap: 20px;
     margin-bottom: 2%;
     .registration-section {
       width: 50%;
@@ -31,6 +32,15 @@
       justify-content: space-between;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 
+      @media (max-width: 500px) {
+        border-radius: 0px 0px 10px 10px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-self: center;
+        padding-left: 12%;
+        height: 150px;
+      }
       h3 {
         margin-bottom: 15px;
         font-size: 1.8rem;
@@ -70,13 +80,25 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
       video {
         width: 100%;
         height: 100%;
         border-radius: 0px 12px 12px 0px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       }
+      @media (max-width: 500px) {
+       margin-left: 5%;
+       width: 100%;
+       & video{
+        border-radius: 0px 0px 0px 0px;
+       }
+      }
+    }
+    @media (max-width: 500px) {
+      margin-top: 30%;
+      display: flex;
+      flex-direction: column-reverse;
+      width: 100%;
     }
   }
 
@@ -100,6 +122,10 @@
       line-height: 1.7;
       color: #444;
       margin-bottom: 20px;
+      @media (max-width: 500px) {
+        text-align: center;
+        margin-left: 6%;
+      }
     }
 
     ul {
@@ -112,25 +138,44 @@
         font-size: 1.1rem;
       }
     }
+    @media (max-width: 500px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
   }
 }
 .divLogoHome{
   display: flex;
   flex-direction: row;
   height: 10%;
-  
   width: 20%;
   padding-top: 1%;
   padding-bottom: 1%;
   padding-left: 2%;
+
+  
   & .LogoH{
     height: 50px;
+    @media (max-width: 500px) {
+      width:45px;
+      height:45px;
+    }
   }
   & .Logo2H{
     height: 50%;
+    @media (max-width: 500px) {
+      width:100px;
+      height:45px;
+    }
   }
- 
+  
   @media (max-width: 500px) {
-    width: 30%;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height:100px;
   }
+
 }
