--- a/src/styles/pages/Login.scss
+++ b/src/styles/pages/Login.scss
@@ -5,12 +5,14 @@
     flex-direction: column;
     align-items: center;
     // background-color: var(--primary-color);
-    background-image: url(../../assets/images/fondo2.png);
+    // background-image: url(../../assets/images/fondo-poli.svg);
     background-size: cover;
     justify-content: center;
   }
 .content {
-      width: 60%;
+  padding-top: 2%;
+  // background-color:#eaeaeada;
+      width: 50%;
       display: flex;
       flex-direction: column;
       align-items: center;
