--- a/src/styles/pages/TouristPointDetail.scss
+++ b/src/styles/pages/TouristPointDetail.scss
@@ -1,21 +1,45 @@
   .tourist-point-detail {
-    min-height: 100vh;
-    padding-top: 5%;
+    height: 100vh;
+    padding-top: 2%;
+    width: 100vw;
+    // background-image: url(../../assets/images/fondo-poli.svg);
     .detail-card {
-      padding: 16px;
-      margin: auto;
-      max-width: 600px;
-  
+        padding: 16px;
+        margin: auto;
+        display: flex;
+        max-width: 600px;
+        height: 95%;
+        flex-direction: column;
+        justify-content: space-between;
       .detail-image {
         width: 100%;
-        height: auto;
+        max-height: 300px;
         margin-bottom: 16px;
       }
-  
+      .btnMore{
+        color: var(--primary-color);
+        &:hover{
+            color: #00b6ce;
+        }
+      }
       .buttons-container {
         display: flex;
-        justify-content: space-between;
-        margin-top: 16px;
+        justify-content: space-around;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        .btnSave {
+            color: var(--primary-color);
+            &:hover{
+                color: #00b6ce;
+            }
+        }
+        
+        .btnCancel{
+            color: #af2432;
+            &:hover{
+               color: #de1227;
+            }
+        }
         .btnEdit{
             color: var(--primary-color);
             border: solid 0.2px var(--primary-color);
@@ -27,23 +51,37 @@
         }
         .btnDelete{
             color: #af2432;
-            border: solid 0.2px #af2432;;
+            border: solid 0.2px #af2432;
             padding: 5px 15px;
             &:hover{
                 color:#fff;
-                background-color:  #af2432;;
+                background-color:  #af2432;
             }
         }
       }
     }
   }
+  .listimages{
+    display: flex;
+    height: 100px;
+    gap: 10px;
+    & .thumbnail-wrapper-list{
+        height: 100px;
+        & img{
+            height: 70px;
+            &:hover{
+                cursor: pointer;
+            }
+        }
+    }
+  }
   .thumbnails-container {
     display: flex;
     gap: 10px;
-
+    margin-top: 2%;
     .thumbnail {
-      width: 80px;
-      height: 60px;
+      width: 100px;
+      height: 70px;
       object-fit: cover;
       cursor: pointer;
       border: 2px solid transparent;
@@ -53,4 +91,30 @@
         border-color: var(--primary-color);
       }
     }
+  }
+  .thumbnail-wrapper{
+    
+    overflow: hidden;
+    width:100px;
+    height: 70px;
+    position: relative;
+    border-radius: 10px;
+    .remove-icon{
+        position: absolute;
+            top: 0;
+            right: 0;
+            width:100px;
+            height: 80px;
+            background-color: #c5c5c594;
+            display: none;
+            z-index: 1;
+            transition: all 3s;
+    }
+    &:hover{
+        .remove-icon{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+           }
   }
