--- a/src/styles/pages/TouristPointsList.scss
+++ b/src/styles/pages/TouristPointsList.scss
@@ -3,6 +3,8 @@
     min-height: 100vh;
     width: 95%;
     margin-left: 5%;
+    background-image: url(../../assets/images/fondo-poli.svg);
+    
     .button-container {
       display: flex;
       justify-content: center;
@@ -22,6 +24,7 @@
     .tourist-point-card {
         cursor: pointer;
     transition: transform 0.2s ease;
+    height: 100%;
 
     &:hover {
       transform: scale(1.02);
