--- a/src/styles/pages/UserProfile.scss
+++ b/src/styles/pages/UserProfile.scss
@@ -3,7 +3,10 @@
   justify-content: center;
   align-items:flex-start;
   min-height: 100vh;
-  background-color: #f9f9f9;
+  // background-color: #f9f9f9;
+  background-image: url(../../assets/images/fondo-poli.svg);
+  // background-repeat: no-repeat;
+  // background-size: cover;
 
   .profile-card {
     margin-top: 10%;
